examples/error/compiler/unclosed-loops.archbtw
; This example program will cause an "unclosed loops" compile-time error.

the ; No `way` keyword to end this loop
